--- a/index.html
+++ b/index.html
@@ -11,63 +11,69 @@
 
 <body>
   <div class="container">
-    <div class="row">
-      <label for="base">10</label>
-      <sup><input type="number" id="exponent" min="-999" max="999" value="0"></sup>
-      <label>=</label>
-      <div id="result-normal">1</div>
-      <label>=</label>
-      <div id="result-scientific">1</div>
+    <div class="block">
+      <div class="row">
+        <label for="base">10</label>
+        <sup><input type="number" id="exponent" min="-999" max="999" value="0"></sup>
+        <label>=</label>
+        <div id="result-normal">1</div>
+        <label>=</label>
+        <div id="result-scientific">1</div>
+      </div>
     </div>
-    <div class="row">
-      <label>Second row label</label>
+    <div class="block">
+      <div class="row">
+        <label>Second row label</label>
+      </div>
+      <div class="row">
+        <button class="conversion-btn" data-factor="1000000000000">biljard</button>
+        <button class="conversion-btn" data-factor="1000000000">biljoen</button>
+        <button class="conversion-btn" data-factor="1000000">miljard</button>
+        <button class="conversion-btn" data-factor="1000000">miljoen</button>
+        <button class="conversion-btn" data-factor="1000">duizend</button>
+        <button class="conversion-btn" data-factor="0.001">één duizendste</button>
+        <button class="conversion-btn" data-factor="0.000001">één miljoenste</button>
+        <button class="conversion-btn" data-factor="0.000000001">één miljardste</button>
+        <button class="conversion-btn" data-factor="0.000000000001">één biljoenste</button>
+        <button class="conversion-btn" data-factor="0.000000000000001">één biljardste</button>
+      </div>
     </div>
-    <div class="row">
-      <button class="conversion-btn" data-factor="1000000000000">biljard</button>
-      <button class="conversion-btn" data-factor="1000000000">biljoen</button>
-      <button class="conversion-btn" data-factor="1000000">miljard</button>
-      <button class="conversion-btn" data-factor="1000000">miljoen</button>
-      <button class="conversion-btn" data-factor="1000">duizend</button>
-      <button class="conversion-btn" data-factor="0.001">één duizendste</button>
-      <button class="conversion-btn" data-factor="0.000001">één miljoenste</button>
-      <button class="conversion-btn" data-factor="0.000000001">één miljardste</button>
-      <button class="conversion-btn" data-factor="0.000000000001">één biljoenste</button>
-      <button class="conversion-btn" data-factor="0.000000000000001">één biljardste</button>
-    </div>
-    <div class="row">
-      <input type="text" id="input1">
-      <label>*</label>
-      <input type="text" id="input2">
-      <label>=</label>
-      <div id="multiply-result-normal">0</div>
-      <label>=</label>
-      <div id="multiply-result-scientific">0</div>
-    </div>
-    <div class="row">
-      <label>Eerste nummer:</label>
-      <button class="fill-btn">biljard</button>
-      <button class="fill-btn">biljoen</button>
-      <button class="fill-btn">miljard</button>
-      <button class="fill-btn">miljoen</button>
-      <button class="fill-btn">duizend</button>
-      <button class="fill-btn">één duizendste</button>
-      <button class="fill-btn">één miljoenste</button>
-      <button class="fill-btn">één miljardste</button>
-      <button class="fill-btn">één biljoenste</button>
-      <button class="fill-btn">één biljardste</button>
-    </div>
-    <div class="row">
-      <label>Tweede nummer:</label>
-      <button class="fill-btn">biljard</button>
-      <button class="fill-btn">biljoen</button>
-      <button class="fill-btn">miljard</button>
-      <button class="fill-btn">miljoen</button>
-      <button class="fill-btn">duizend</button>
-      <button class="fill-btn">één duizendste</button>
-      <button class="fill-btn">één miljoenste</button>
-      <button class="fill-btn">één miljardste</button>
-      <button class="fill-btn">één biljoenste</button>
-      <button class="fill-btn">één biljardste</button>
+    <div class="block">
+      <div class="row">
+        <label>Eerste nummer:</label>
+        <button class="fill-btn" data-value="1000000000000">biljard</button>
+        <button class="fill-btn" data-value="1000000000">biljoen</button>
+        <button class="fill-btn" data-value="1000000">miljard</button>
+        <button class="fill-btn" data-value="1000000">miljoen</button>
+        <button class="fill-btn" data-value="1000">duizend</button>
+        <button class="fill-btn" data-value="0.001">één duizendste</button>
+        <button class="fill-btn" data-value="0.000001">één miljoenste</button>
+        <button class="fill-btn" data-value="0.000000001">één miljardste</button>
+        <button class="fill-btn" data-value="0.000000000001">één biljoenste</button>
+        <button class="fill-btn" data-value="0.000000000000001">één biljardste</button>
+      </div>
+      <div class="row">
+        <label>Tweede nummer:</label>
+        <button class="fill-btn" data-value="1000000000000">biljard</button>
+        <button class="fill-btn" data-value="1000000000">biljoen</button>
+        <button class="fill-btn" data-value="1000000">miljard</button>
+        <button class="fill-btn" data-value="1000000">miljoen</button>
+        <button class="fill-btn" data-value="1000">duizend</button>
+        <button class="fill-btn" data-value="0.001">één duizendste</button>
+        <button class="fill-btn" data-value="0.000001">één miljoenste</button>
+        <button class="fill-btn" data-value="0.000000001">één miljardste</button>
+        <button class="fill-btn" data-value="0.000000000001">één biljoenste</button>
+        <button class="fill-btn" data-value="0.000000000000001">één biljardste</button>
+      </div>
+      <div class="row">
+        <input type="text" id="input1">
+        <label>*</label>
+        <input type="text" id="input2">
+        <label>=</label>
+        <div id="multiply-result-normal">0</div>
+        <label>=</label>
+        <div id="multiply-result-scientific">0</div>
+      </div>
     </div>
   </div>
   <script src="main.js"></script>
