trying to change input to numeric on exponent of 10

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       </div>
       <div class="row">
         <label for="base">10</label>
-        <sup><input type="number" id="exponent" min="-999" max="999" value="0"></sup>
+        <sup><input type="text" pattern="[0-9]*" inputmode="numeric" id="exponent" min="-999" max="999" value="0"></sup>
         <label>&nbsp;=</label>
         <div id="result-normal">1</div>
         <label>=</label>
