Adding numeric input and forcing locale to Netherlands

--- a/index.html
+++ b/index.html
@@ -89,9 +89,9 @@
         <button class="fill-btn" data-value="0,000000000000001">één biljardste</button>
       </div>
       <div class="row">
-        <input type="text" id="input1" value="1">
+        <input type="text" inputmode="numeric" id="input1" value="1">
         <label> × </label>
-        <input type="text" id="input2" value="1">
+        <input type="text" inputmode="numeric" id="input2" value="1">
         <label>=</label>
       </div>
       <div class="row">
