--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <label>(Negeer antwoorden waar veel 9's in staan, dit is een computer logica foutje)</label>
       </div>
       <div class="row">
-        <label for="base">10</label>
+        <label for="base">10 ^ </label>
         <sup><input type="number" pattern="[0-9]*" inputmode="numeric" id="exponent" min="-999" max="999" value="0"></sup>
         <label>&nbsp;=</label>
         <div id="result-normal">1</div>
