--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
           <br>(2) Speel is met [BLOK 1], kan je een relatie vinden tussen de macht van de 10 en het aantal nullen?
           <br>(3) Speel met [BLOK 2] en kijk hoe de getallen uit de spreektaal vertalen naar 10<sup>?</sup> notatie.
           <br>(4) Speel met [BLOK 3], wat valt op aan de machten van 10 van het 1<sup>e</sup> en 2<sup>e</sup> nummer en de macht van 10 van het antwoord?
-          <br>(5) Waarom denk je dat deze notatie, a * 10<sup>b</sup>?, bestaat? Wat zijn de voordelen ervan?
+          <br>(5) Waarom denk je dat deze notatie, a * 10<sup>b</sup>, bestaat? Wat zijn de voordelen ervan?
         </label>
       </div>
     </div>
